fix: Address PR #197 review feedback
- Centralize default personas list in constants/defaultPersonas.ts
- Fix inefficient base64 validation with regex approach
- Add URL validation for security (prevent SSRF attacks)
- Fix race condition in persona lookup by using single reference
- Add size limits for exports (100KB per persona, 1MB bundles)
- Add maximum personas per bundle limit (50)
- Fix TypeScript errors with isDefaultPersona function

This addresses high-priority issues from the code review.

--- a/.npmignore
+++ b/.npmignore
@@ -24,7 +24,7 @@ tsconfig.test.json
 claude_desktop_config.json
 
 # Dollhouse specific
-personas/
+# personas/  # Include personas in npm package
 claude.md
 .claude/
 CLAUDE.md
