feat: Add comprehensive security audit suppressions
- Implement suppression configuration for false positives
- Reduce findings from 68 to 32 by removing false positives
- Suppress SQL injection false positives in UpdateManager
- Suppress Unicode warnings for type definitions and config files
- Suppress audit logging warnings for non-security operations
- Keep legitimate security findings visible for resolution

Addresses Issue #255

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,10 @@ jest.config.js
 
 # Windows installer (keep the shell script, ignore PowerShell for now)
 install.ps1
+
+# Security audit reports (keep private)
+security-audit-report.md
+security-audit-report.json
+security-audit-*.md
+security-audit-*.json
+.security-audit/
