--- a/.github/workflows/readme-sync.yml
+++ b/.github/workflows/readme-sync.yml
@@ -102,6 +102,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
+          cache: 'npm'
       
       - name: Install dependencies
         if: steps.check_auto_commit.outputs.skip != 'true' && steps.check_triggers.outputs.proceed == 'true'
@@ -174,10 +175,15 @@ jobs:
           # Add the README files
           git add ${{ env.README_FILES_PATTERN }}
           
-          # HIGH PRIORITY FIX: Sanitize branch name for commit message
+          # SECURITY FIX: Sanitize branch name to prevent command injection
+          # Use parameter expansion instead of sed to avoid shell injection
           BRANCH_NAME="${{ github.ref_name }}"
-          # Remove any characters that could cause shell injection
-          CLEAN_BRANCH_NAME=$(echo "$BRANCH_NAME" | sed 's/[^a-zA-Z0-9._/-]/_/g')
+          # Replace non-alphanumeric characters with underscores using pure bash
+          # This is safer than using sed with user input
+          CLEAN_BRANCH_NAME="${BRANCH_NAME//[^a-zA-Z0-9._\/-]/_}"
+          
+          # Additional safety: Truncate to reasonable length
+          CLEAN_BRANCH_NAME="${CLEAN_BRANCH_NAME:0:100}"
           
           # Create safe commit message
           COMMIT_MSG="chore: Auto-sync README files on ${CLEAN_BRANCH_NAME} push"
