fix(sonarcloud): Partial fixes for vulnerabilities and bugs
Fixed:
- 2 unreachable code issues
- 1 missing reduce() initial value
- 1 regex precedence issue
- Started fixing GitHub Actions command injection (2 of 13)

Remaining for next session:
- 11 more GitHub Actions vulnerabilities
- 54 more bugs to fix
- 1 false positive to mark in SonarCloud

Session notes and fix plan documented for continuation.

--- a/.github/workflows/version-update.yml
+++ b/.github/workflows/version-update.yml
@@ -39,9 +39,11 @@ jobs:
       
       - name: Validate version format
         shell: bash
+        env:
+          VERSION: ${{ inputs.version }}
         run: |
-          if ! echo "${{ inputs.version }}" | grep -E '^[0-9]+\.[0-9]+\.[0-9]+(-[a-zA-Z0-9.-]+)?$'; then
-            echo "❌ Invalid version format: ${{ inputs.version }}"
+          if ! echo "$VERSION" | grep -E '^[0-9]+\.[0-9]+\.[0-9]+(-[a-zA-Z0-9.-]+)?$'; then
+            echo "❌ Invalid version format: $VERSION"
             echo "Version must follow semantic versioning (e.g., 1.6.5 or 1.6.5-beta.1)"
             exit 1
           fi
@@ -56,10 +58,10 @@ jobs:
       
       - name: Check if version is newer
         shell: bash
+        env:
+          CURRENT: ${{ steps.current_version.outputs.current }}
+          NEW: ${{ inputs.version }}
         run: |
-          CURRENT="${{ steps.current_version.outputs.current }}"
-          NEW="${{ inputs.version }}"
-          
           # Simple version comparison (works for most cases)
           if [ "$CURRENT" = "$NEW" ]; then
             echo "⚠️ Version $NEW is the same as current version"
