fix: Address SonarCloud BLOCKER issues and improve code quality
- Fix GitHub Actions command injection vulnerabilities by using env vars
- Use full SHA hashes for GitHub Actions dependencies (security best practice)
- Fix ConfigWizardCheck to check for major version changes instead of always returning false
- Implement real duplicate detection in UnifiedIndexManager (not placeholder)
- Add SonarCloud management scripts for issue triage automation

Fixes addressed:
- 13 command injection vulnerabilities in GitHub workflows
- 2 'always returns same value' code smells
- Added proper logic for update wizard and duplicate counting

Created comprehensive SonarCloud tooling:
- sonarcloud-manager.cjs: API automation for issue management
- analyze-sonarcloud-issues.cjs: Issue categorization and strategy
- SONARCLOUD_CLEANUP_STRATEGY.md: Actionable cleanup plan

--- a/.github/workflows/branch-protection.yml
+++ b/.github/workflows/branch-protection.yml
@@ -129,8 +129,11 @@ jobs:
       - name: Summary
         if: always()
         shell: bash
+        env:
+          HEAD_REF: ${{ github.head_ref }}
+          BASE_REF: ${{ github.base_ref }}
         run: |
           echo "### Branch Protection Summary"
-          echo "- PR from: ${{ github.head_ref }}"
-          echo "- PR to: ${{ github.base_ref }}"
+          echo "- PR from: ${HEAD_REF}"
+          echo "- PR to: ${BASE_REF}"
           echo "- Status: See checks above"
