hotfix: Remove hardcoded token from validation script
SECURITY FIX - Addresses SonarCloud BLOCKER vulnerability

- Replace hardcoded PAT with environment variable GITHUB_TEST_TOKEN
- Add proper error handling if token not provided
- Add script to .gitignore to prevent future token leaks

The hardcoded token was already expired/revoked but still triggered
security scanners. Script now requires:
GITHUB_TEST_TOKEN=ghp_xxx ./run-sync-test-with-pat.sh

Fixes #1148

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,9 @@ src/generated/
 .env.production.local
 test/e2e/.env.test.local
 
+# Scripts with credentials (should use environment variables)
+scripts/validation/run-sync-test-with-pat.sh
+
 # IDE files
 .vscode/
 .idea/
